added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>My Simple Website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, tempora error. Perspiciatis, facilis, odio deserunt itaque quam, sint quis amet beatae voluptate a neque! In, recusandae soluta debitis voluptatibus ipsa tempore et perspiciatis nulla similique consectetur, ipsum inventore quidem quo enim asperiores nihil exercitationem suscipit dicta possimus minima reiciendis. Vero minima nisi tempora consectetur eum, cumque totam dolorum quo itaque, repudiandae repellendus blanditiis ullam incidunt! Blanditiis voluptas voluptate consequatur possimus nihil placeat animi quidem, debitis ullam molestiae eaque qui, magni earum perspiciatis dolorum architecto beatae obcaecati sapiente reiciendis vitae est inventore numquam? Corporis repudiandae explicabo libero iste, dignissimos hic deleniti?</p>
 </body>
 </html>
